Revert "Merge pull request #1 from AnderRedna/Anderu"
This reverts commit 796f60d3b951780ed5ed33d78cc03a8381fc15dc, reversing
changes made to f73b311a76440ce828db748c7f13e2517faba146.

--- a/index.html
+++ b/index.html
@@ -51,75 +51,62 @@
                <h2 class="user sm1">User 1</h2>
                <h2 class="status sm1">
                   <div class="statusIcon iconsms1"></div>
-                  Disponível
+                  Livre
                </h2>
-               <h2 class="timer sm1">
-                  30:00
-               </h2>
-               <h2 id="namesm1" class="name sm1">Disponível</h2>
+               <h2 contenteditable="true" id="namesm1" class="name sm1">Disponível</h2>
             </div>
-
-            <div class="item Bodysm1" onclick="changeStatus(this)">
-               <div class="header itemsm1">
-                  <div class="info itemsm1" onclick="openModal(1)"></div>
+            <div class="item Bodysm2" onclick="changeStatus(this)">
+               <div class="header itemsm2">
+                  <div class="info itemsm2" onclick="openModal(2)"></div>
                   <div class="circle">
                      <h1>SM</h1>
                   </div>
-                  <div class="report itemsm1" onclick="openReport()"></div>
+                  <div class="report itemsm2" onclick="openReport()"></div>
                </div>
-               <h2 class="user sm1">User 1</h2>
-               <h2 class="status sm1">
-                  <div class="statusIcon iconsms1"></div>
-                  Disponível
+               <h2 class="user sm2">User 2</h2>
+               <h2 class="status sm2">
+                  <div class="statusIcon iconsm2"></div>
+                  Ocupado
                </h2>
-               <h2 class="timer sm1">
-                  30:00
-               </h2>
-               <h2 id="namesm1" class="name sm1">Disponível</h2>
+               <h2 contenteditable="true" class="name sm2">Anderton Rodrigues</h2>
             </div>
+            <div class="item Bodynt1" onclick="changeStatus(this)">
+                <div class="header itemnt1">
+                   <div class="info itemnt1" onclick="openModal(3)"></div>
+                   <div class="circle">
+                      <h1>NT</h1>
+                   </div>
+                   <div class="report itemnt1" onclick="openReport()"></div>
+                </div>
+                <h2 class="user nt1">User 1</h2>
+                <h2 class="status nt1">
+                   <div class="statusIcon iconnt1"></div>
+                   Ocupado
+                </h2>
+                <h2 contenteditable="true"  class="name nt1">Kleuber Cardoso</h2>
+             </div>
+             <div class="item Bodynt2" onclick="changeStatus(this)">
+                <div class="header itemnt2">
+                   <div class="info itemnt2" onclick="openModal(4)"></div>
+                   <div class="circle">
+                      <h1>NT</h1>
+                   </div>
+                   <div class="report itemnt2" onclick="openReport()"></div>
+                </div>
+                <h2 class="user nt2">User 2</h2>
+                <h2 class="status nt2">
+                   <div class="statusIcon iconnt2"></div>
+                   Livre
+                </h2>
+                <h2 contenteditable="true" class="name nt2">Disponível</h2>
+             </div>
+          </div>
 
-            <div class="item Bodysm1" onclick="changeStatus(this)">
-               <div class="header itemsm1">
-                  <div class="info itemsm1" onclick="openModal(1)"></div>
-                  <div class="circle">
-                     <h1>SM</h1>
-                  </div>
-                  <div class="report itemsm1" onclick="openReport()"></div>
-               </div>
-               <h2 class="user sm1">User 1</h2>
-               <h2 class="status sm1">
-                  <div class="statusIcon iconsms1"></div>
-                  Disponível
-               </h2>
-               <h2 class="timer sm1">
-                  30:00
-               </h2>
-               <h2 id="namesm1" class="name sm1">Disponível</h2>
-            </div>
-
-            <div class="item Bodysm1" onclick="changeStatus(this)">
-               <div class="header itemsm1">
-                  <div class="info itemsm1" onclick="openModal(1)"></div>
-                  <div class="circle">
-                     <h1>SM</h1>
-                  </div>
-                  <div class="report itemsm1" onclick="openReport()"></div>
-               </div>
-               <h2 class="user sm1">User 1</h2>
-               <h2 class="status sm1">
-                  <div class="statusIcon iconsms1"></div>
-                  Disponível
-               </h2>
-               <h2 class="timer sm1">
-                  30:00
-               </h2>
-               <h2 id="namesm1" class="name sm1">Disponível</h2>
-            </div>
         </div>
-
         <script src="main.js"></script>
         <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+      
       <script type="text/javascript">
         emailjs.init('VEe6yCyK6JDJuTBrz')
       </script>
