--- a/testHere/test.html
+++ b/testHere/test.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="testeStyle.css">
 </head>
 <body>
-    <p id="countdown">10:00</p>
-    <button onclick="verify()" id="btnA" style="width: 100px; height: 100px">Usar</button>
-    <script src="script.js"></script>
+    <div class="container"><p id="countdown">10:00</p>
+        <button onclick="verify(this)" id="btnA" style="width: 60px; height: 60px">Usar</button>
+        </div>
+    <div class="container"><p id="countdown">10:00</p>
+        <button onclick="verify(this)" id="btnB" style="width: 60px; height: 60px">Usar</button>
+        </div>
+        <script src="script.js"></script>
 </body>
 </html>
