--- a/testHere/test.html
+++ b/testHere/test.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="testeStyle.css">
 </head>
 <body>
-    <div class="container"><p id="countdown">10:00</p>
-        <button onclick="verify(this)" id="btnA" style="width: 60px; height: 60px">Usar</button>
+    <div class="container"><p id="countdownA">10:00</p>
+        <button onclick="verify(timerVm1)" id="btnA" style="width: 60px; height: 60px">Usar</button>
         </div>
-    <div class="container"><p id="countdown">10:00</p>
-        <button onclick="verify(this)" id="btnB" style="width: 60px; height: 60px">Usar</button>
+    <div class="container"><p id="countdownB">10:00</p>
+        <button onclick="verify(timerVm2)" id="btnB" style="width: 60px; height: 60px">Usar</button>
         </div>
         <script src="script.js"></script>
 </body>
