--- a/index.html
+++ b/index.html
@@ -148,14 +148,13 @@
             </div>
 
             <div>
-               <button class="cookie" onclick="App.start()">
+               <button class="cookie" onclick="NotifStart()">
                   cookie Teste
                </button>
             </div>
         </div>
 
-        <script src="main.js"></script>
-        <script type="module" src="./src/App.js"></script>
+        <script type="module" src="main.js"></script>
         <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
       <script type="text/javascript">
