--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
 
             <div>
-               <button class="cookie" onclick="NotifStart()">
+               <button id="Notif" class="cookie">
                   cookie Teste
                </button>
             </div>
