--- a/testHere/test.html
+++ b/testHere/test.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <script src="./VmTimes.js"></script>
     <div id='countdown1'>10:00</div>
     <div id='countdown2'>10:00</div>
     <div id='countdown3'>10:00</div>
