--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                </button>
             </div> -->
         </div>
-      <script src="VmTimes.js"></script>
       <script src="main.js"></script>
+      <script src="getElements.js"></script>
         <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
       <script type="text/javascript">
